objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Actions_Stronger_Sponsor__c</fullName>
        <label>Actions to Become a Stronger Sponsor</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calls_Meetings_FY_Event__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Calls &amp; Meetings FY (Event)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls_Meetings_FY_Tsk__c</fullName>
        <inlineHelpText>Calculates the number of Calls and Meetings we have had with this Client for the current Year.</inlineHelpText>
        <label>Calls &amp; Meetings FY (Tsk)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls_Meetings_this_FY__c</fullName>
        <formula>Calls_Meetings_FY_Tsk__c + Calls_Meetings_FY_Event__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calls &amp; Meetings this FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_about_Contact__c</fullName>
        <label>Comments about Contact</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Activity_Status__c</fullName>
        <formula>IF(ISNULL(Last_Client_Meeting__c),&quot;No Client Meeting Has Ever Been Created&quot;,
IF(ISNULL(Expected_Activity_Date__c),&quot;No Contact Frequency Set&quot;,
IF(Expected_Activity_Date__c &lt; Today(),&quot;LATE&quot;,
IF(Expected_Activity_Date__c - Today() &lt; 8, &quot;Activity Due This Week&quot;,
&quot;On Schedule&quot;
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Meeting Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Frequency__c</fullName>
        <label>Contact Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Biannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>FirstName &amp;&apos; &apos;&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_until_Next_Activity__c</fullName>
        <description>Negative Values = # of days that we are Behind from when the Last Client Meeting was expected to occur
Positive Values = # of days to spare until the Next Client Meeting is expected to occur</description>
        <formula>IF(OR(ISNULL(Expected_Activity_Date__c),ISNULL(Last_Client_Meeting__c)),null,Expected_Activity_Date__c - Today())</formula>
        <inlineHelpText># of Days left until we have to reach out to this Contact: 
Negative #s = Late / Behind Schedule
Positive #s = Ahead of Schedule
Calculation looks at the &quot;Contact Frequency&quot; field and compares it with the &quot;Last Client Meeting&quot; date.</inlineHelpText>
        <label>Days until Next Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Activity_Date__c</fullName>
        <description>IF(ISPICKVAL(Contact_Frequency__c, &quot;Weekly&quot;), Last_Client_Meeting__c +7,</description>
        <formula>IF(ISPICKVAL(Contact_Frequency__c, &quot;Bi-Weekly&quot;), Last_Client_Meeting__c +14,
IF(ISPICKVAL(Contact_Frequency__c, &quot;Monthly&quot;), Last_Client_Meeting__c +31,
IF(ISPICKVAL(Contact_Frequency__c, &quot;Quarterly&quot;), Last_Client_Meeting__c +61,
IF(ISPICKVAL(Contact_Frequency__c, &quot;Biannually&quot;), Last_Client_Meeting__c +183,
IF(ISPICKVAL(Contact_Frequency__c, &quot;Annually&quot;), Last_Client_Meeting__c +365,null
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the old ID field from the EMEA SF Org</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Family_Notes__c</fullName>
        <inlineHelpText>Please enter in any relevant notes about this Contact&apos;s Family.</inlineHelpText>
        <label>Family Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this Contact still work here, for this Account?</inlineHelpText>
        <label>Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <description>To mark the level of influence of a contact at a key account.</description>
        <inlineHelpText>What is the level of influence this individual has?

Values 1 to 10. (10 being high)

When two contacts have the same level then mark one with an extra point 5 (0.5) value to allow them both  to be seen on the Sponsor Blocker chart.</inlineHelpText>
        <label>Influence</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Investor_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investor Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KDM_Rank__c</fullName>
        <inlineHelpText>This field will be eliminated and merged into the Influence. Please ensure any values here are reflected properly in the Influence field.</inlineHelpText>
        <label>KDM Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landowner_Role__c</fullName>
        <label>Landowner Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Surface Owner – Point of Contact</fullName>
                </value>
                <value>
                    <fullName>Surface Owner</fullName>
                </value>
                <value>
                    <fullName>Mineral Owner</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Client_Meeting__c</fullName>
        <inlineHelpText>Date stamp of when the last Face to Face Meeting was held for this Contact.</inlineHelpText>
        <label>Last Client Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <label>Newsletter</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>French Newsletter</fullName>
                </value>
                <value>
                    <fullName>Nordics AM new lead</fullName>
                </value>
                <value>
                    <fullName>UK&amp;I Customer Survey</fullName>
                </value>
                <value>
                    <fullName>UK&amp;I Newsletter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_In_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-In Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Interests__c</fullName>
        <label>Personal Interests</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Wins__c</fullName>
        <label>Personal Wins</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If left blank, this field will automatically pull the USER from within the Contact&apos;s &quot;Owner&quot; field and replace it with the associated RES CONTACT.</inlineHelpText>
        <label>Primary Contact Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>This Contact does not exist on one of the &quot;Renewable Energy System&quot; Accounts. Please create their Contact here: https://res-group.lightning.force.com/one/one.app#/sObject/001i000000svaF8AAI/view</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>RES T&amp;D</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Primary Contact Owner)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RES_Is_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vertiba3/10/2014 - Phase1</description>
        <inlineHelpText>Check if True</inlineHelpText>
        <label>Is Private?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RES_Other_Email__c</fullName>
        <description>Vertiba4/4/2014 - Phase1</description>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Relationship_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>RES Employee who is also responsible for the relationship of this Contact and the necessary outreach.</inlineHelpText>
        <label>Secondary Contact Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>This RES Employee must already exist as a Contact on one of the &quot;Renewable Energy Systems&quot; Accounts. If they don&apos;t exist yet, please add them to as new Contact on the parent, or one of the subsidiary RES Accounts.</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>RES T&amp;D</value>
            </filterItems>
            <infoMessage>Must be a Contact on one of the &quot;Renewable Energy System&quot; Accounts.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Contact&apos;s relationship to RES. NOT their Title.</inlineHelpText>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_of_RES__c</fullName>
        <inlineHelpText>What is the Client&apos;s perception of RES?  Please input a range between -5 and +5.

Definitions of these values can be found via the URL link on this contact page (below).</inlineHelpText>
        <label>View of RES</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Landowner</fullName>
        <active>false</active>
        <label>Landowner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect_Contact</fullName>
        <active>true</active>
        <label>Prospect Contact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contact_Media_Required</fullName>
        <active>true</active>
        <description>Created to make either email, phone, or mobile required</description>
        <errorConditionFormula>AND(
 ISNEW(),
 ISBLANK(Phone),
 ISBLANK(Email),
 ISBLANK(MobilePhone)
 )</errorConditionFormula>
        <errorMessage>Please enter either the Phone, Email, or Mobile.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Influence_between_0_and_10</fullName>
        <active>true</active>
        <description>The value for &apos;Influence&apos; must be between 0 and 10</description>
        <errorConditionFormula>Influence__c  &lt;0 ||  Influence__c &gt; 10</errorConditionFormula>
        <errorDisplayField>Influence__c</errorDisplayField>
        <errorMessage>The value for &apos;Influence&apos; must be greater than 0 and less than (or equal to) 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>KDMs_need_Influence_and_View_of_RES</fullName>
        <active>true</active>
        <description>If KDM checkbox is selected AND Account is a Key Account, then Influence AND View of RES is required.</description>
        <errorConditionFormula>AND(
Key_Decision_Maker__c =True,
OR(
ISPICKVAL(Account.Tier__c, &quot;Global Key&quot;),
ISPICKVAL(Account.Tier__c, &quot;BL Key&quot;),
ISPICKVAL(Account.Tier__c, &quot;Regional Key&quot;)),
OR(
ISBLANK( Influence__c ),
ISBLANK( View_of_RES__c ))
)</errorConditionFormula>
        <errorDisplayField>Influence__c</errorDisplayField>
        <errorMessage>Please enter a value for both the &apos;Influence&apos; AND &apos;View of RES &apos; fields (required fields when a Contact is a KDM on a Key Account).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>View_of_RES_between_minus_5_and_5</fullName>
        <active>true</active>
        <description>The value for &apos;View of RES&apos; must be between -5 and +5</description>
        <errorConditionFormula>View_of_RES__c &lt;-5 ||  View_of_RES__c &gt;5</errorConditionFormula>
        <errorDisplayField>View_of_RES__c</errorDisplayField>
        <errorMessage>The value for &apos;View of RES&apos; must be between -5 and +5</errorMessage>
    </validationRules>
</CustomObject>